# dashdotlocal

./: Cargo.toml  readme.md
app/: Cargo.toml
app/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  recognizedServices.ts  serviceSchema.ts
src/: main.rs  services.rs  types.rs
webui/src/: App.tsx  ServiceDetail.tsx  main.tsx  sorting.ts
webui/src/components/App/: App.tsx
webui/src/components/ServiceDetail/: ServiceDetail.tsx
webui/src/lib/: recognizedServices.ts  sorting.ts
