[package]
name = "dashdotlocal"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tower = "0.4"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.4", features = ["cors"] }
futures-core = "0.3.31"
